--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <title>Hello, Git!</title>
 </head>
 <body>
-   
-    <p>Paragraph one</p>
-    <p>paragraph two</p>
-    <p>Paragraph 3</p>
-
+   <p>My portfolio</p>
 </body>
 </html>
