--- a/warsztaty/formularz_html/index.html
+++ b/warsztaty/formularz_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Warsztaty</title>
+    <title>Formularz HTML</title>
 </head>
 <body>
     
