--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -9,8 +9,8 @@
         <label for="name">Imię</label><input type="text" id="name"><br />
         <label for="surname">Nazwisko</label><input type="text" id="surname"><br />
         <label for="email">E-mail</label><input type="email" name="_replyto" id="email"><br />
-        <label for="number">Telefon</label><input type="number" id="number">
-        <label for="message">Wiadomość</label><textarea name="message" id="message"></textarea>
+        <label for="number">Telefon</label><input type="number" id="number"><br />
+        <label for="message">Wiadomość</label><textarea name="message" id="message"></textarea><br />
         <input type="submit" value="Send">
     </form>
 </body>
