--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -5,7 +5,7 @@
     <title>Forms</title>
 </head>
 <body>
-    <form action="https://formspree.io/tobush@ukr.net" method="POST">
+    <form action="https://formspree.io/tobush@ukr.net" method="post">
         <label for="name">Imię</label><input type="text" id="name"><br />
         <label for="surname">Nazwisko</label><input type="text" id="surname"><br />
         <label for="email">E-mail</label><input type="email" name="_replyto" id="email"><br />
