--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <form action="https://formspree.io/tobush@ukr.net" method="post">
-        <label for="name">Imię</label><input type="text" id="name"><br />
-        <label for="surname">Nazwisko</label><input type="text" id="surname"><br />
-        <label for="email">E-mail</label><input type="email" name="_replyto" id="email"><br />
-        <label for="number">Telefon</label><input type="number" id="number"><br />
+        <label for="name">Imię</label><input type="text" id="name" name="name"><br />
+        <label for="surname">Nazwisko</label><input type="text" id="surname" name="surname"><br />
+        <label for="email">E-mail</label><input type="email" name="_replyto" id="email" name="email"><br />
+        <label for="number">Telefon</label><input type="number" id="number" name="number"><br />
         <label for="message">Wiadomość</label><textarea name="message" id="message"></textarea><br />
         <input type="submit" value="Send">
     </form>
