--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Forms</title>
 </head>
+
 <body>
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
+
     <form action="https://formspree.io/tobush@ukr.net" method="post">
         <label for="name">Imię</label><input type="text" id="name" name="name"><br />
         <label for="surname">Nazwisko</label><input type="text" id="surname" name="surname"><br />
@@ -13,5 +24,11 @@
         <label for="message">Wiadomość</label><textarea name="message" id="message"></textarea><br />
         <input type="submit" value="Send">
     </form>
+    <form action="https://formspree.io/tobush@ukr.net" method="post">
+        <label for="name"></label>
+        <input type="text" id="name" name>
+        <br>
+    </form>
 </body>
+
 </html>
