--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -5,29 +5,29 @@
     <meta charset="UTF-8">
     <title>Forms</title>
 </head>
-
 <body>
-    <nav>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </nav>
-
     <form action="https://formspree.io/tobush@ukr.net" method="post">
-        <label for="name">Imię</label><input type="text" id="name" name="name"><br />
-        <label for="surname">Nazwisko</label><input type="text" id="surname" name="surname"><br />
-        <label for="email">E-mail</label><input type="email" name="_replyto" id="email" name="email"><br />
-        <label for="number">Telefon</label><input type="number" id="number" name="number"><br />
-        <label for="message">Wiadomość</label><textarea name="message" id="message"></textarea><br />
+        <label for="name">Imię</label><input type="text" id="name" placeholder="imię" name="Name"><br /><br />
+        <label for="surname">Nazwisko</label><input type="text" id="surname" placeholder="nazwisko" name="Surname"><br /><br />
+        <label for="email">E-mail</label><input type="email" id="email" name="_replyto" placeholder="email@example.com"><br /><br />
+        <label for="City">Wybierz miasto</label><select name="City" id="city">
+            <option value="option1">Warszawa</option>
+            <option value="option2">Kraków</option>
+            <option value="option3">Gdańsk</option>
+        </select>
+        <br /><br />
+        <p>Płeć:</p>
+        <label for="man">Mężczyżna</label><input type="radio" id="man" name="Płeć" value="Mężczyżna">
+        <label for="woman">Kobieta</label><input type="radio" id="woman" name="Płeć" value="Kobieta">
+        <br /><br />
+        <label for="checkbox">Zgadzam się na przetwarzanie moich danych osobowych.</label>
+        <input type="checkbox" name="zgoda" id="checkbox">
+        <br /><br />
+        <label for="message">Twoja wiadomość</label>
+        <br /><br />
+        <textarea name="Wiadomość" id="message" placeholder="Twoja wiadomość" cols="50" rows="10"></textarea>
+        <br /><br />
         <input type="submit" value="Send">
-    </form>
-    <form action="https://formspree.io/tobush@ukr.net" method="post">
-        <label for="name"></label>
-        <input type="text" id="name" name>
-        <br>
     </form>
 </body>
 
