--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -11,9 +11,9 @@
         <label for="surname">Nazwisko</label><input type="text" id="surname" placeholder="nazwisko" name="Surname"><br /><br />
         <label for="email">E-mail</label><input type="email" id="email" name="_replyto" placeholder="email@example.com"><br /><br />
         <label for="City">Wybierz miasto</label><select name="City" id="city">
-            <option value="option1">Warszawa</option>
-            <option value="option2">Kraków</option>
-            <option value="option3">Gdańsk</option>
+            <option value="Warszawa">Warszawa</option>
+            <option value="Kraków">Kraków</option>
+            <option value="Gdańsk">Gdańsk</option>
         </select>
         <br /><br />
         <p>Płeć:</p>
@@ -21,7 +21,7 @@
         <label for="woman">Kobieta</label><input type="radio" id="woman" name="Płeć" value="Kobieta">
         <br /><br />
         <label for="checkbox">Zgadzam się na przetwarzanie moich danych osobowych.</label>
-        <input type="checkbox" name="zgoda" id="checkbox">
+        <input type="checkbox" name="Zgoda" id="checkbox">
         <br /><br />
         <label for="message">Twoja wiadomość</label>
         <br /><br />
