--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -9,7 +9,7 @@
     <form action="https://formspree.io/tobush@ukr.net" method="post">
         <label for="name">Imię</label><input type="text" id="name" placeholder="imię" name="Name"><br /><br />
         <label for="surname">Nazwisko</label><input type="text" id="surname" placeholder="nazwisko" name="Surname"><br /><br />
-        <label for="email">E-mail</label><input type="email" id="email" name="_replyto" placeholder="email@example.com"><br /><br />
+        <label for="email">E-mail</label><input type="email" id="email" name="E-mail address" placeholder="email@example.com"><br /><br />
         <label for="City">Wybierz miasto</label><select name="City" id="city">
             <option value="Warszawa">Warszawa</option>
             <option value="Kraków">Kraków</option>
@@ -27,7 +27,7 @@
         <br /><br />
         <textarea name="Wiadomość" id="message" placeholder="Twoja wiadomość" cols="50" rows="10"></textarea>
         <br /><br />
-        <input type="submit" value="Send">
+        <input type="submit" value="Wyślij">
     </form>
 </body>
 
