--- a/homework/task_3/index.html
+++ b/homework/task_3/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="homework/task_3/css/style.css">
     <title>CSS Homework</title>
 </head>
 
