--- a/homework/task_2/index.html
+++ b/homework/task_2/index.html
@@ -5,20 +5,27 @@
     <meta charset="UTF-8">
     <title>Forms</title>
 </head>
+
 <body>
     <form action="https://formspree.io/tobush@ukr.net" method="post">
-        <label for="name">Imię</label><input type="text" id="name" placeholder="imię" name="Name"><br /><br />
-        <label for="surname">Nazwisko</label><input type="text" id="surname" placeholder="nazwisko" name="Surname"><br /><br />
-        <label for="email">E-mail</label><input type="email" id="email" name="E-mail address" placeholder="email@example.com"><br /><br />
-        <label for="City">Wybierz miasto</label><select name="City" id="city">
+        <label for="name">Imię</label>
+        <input type="text" id="name" placeholder="imię" name="Name"><br /><br />
+        <label for="surname">Nazwisko</label>
+        <input type="text" id="surname" placeholder="nazwisko" name="Surname"><br /><br />
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="E-mail address" placeholder="email@example.com"><br /><br />
+        <label for="city">Wybierz miasto</label>
+        <select name="City" id="city">
             <option value="Warszawa">Warszawa</option>
             <option value="Kraków">Kraków</option>
             <option value="Gdańsk">Gdańsk</option>
         </select>
         <br /><br />
         <p>Płeć:</p>
-        <label for="man">Mężczyżna</label><input type="radio" id="man" name="Płeć" value="Mężczyżna">
-        <label for="woman">Kobieta</label><input type="radio" id="woman" name="Płeć" value="Kobieta">
+        <label for="man">Mężczyżna</label>
+        <input type="radio" id="man" name="Płeć" value="Mężczyżna">
+        <label for="woman">Kobieta</label>
+        <input type="radio" id="woman" name="Płeć" value="Kobieta">
         <br /><br />
         <label for="checkbox">Zgadzam się na przetwarzanie moich danych osobowych.</label>
         <input type="checkbox" name="Zgoda" id="checkbox">
