--- a/homework/task_4/index.html
+++ b/homework/task_4/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>HTML forms advanced</title>
 </head>
 <body>
+<header>
+    <h1>A Simple Form</h1>
+    <p>Form Fundamentals</p>
+</header>
+  <section>
+      <p>Customer Info</p>
+      <label for="name">Name</label>
+      <input type="text" id="name" class="input-one"> 
+      <br /><br />
+      <label for="phone">Telephone</label>
+      <input type="number" id="phone" class="input-one">
+      <br /><br />
+      <label for="email">Email address</label>
+      <input type="email" id="email" class="input-one">
+      <br /><br />
+  </section>
    
+   <footer>
+       <label for=""></label>
+   </footer>
    
     
 </body>
