--- a/homework/task_4/index.html
+++ b/homework/task_4/index.html
@@ -22,7 +22,7 @@
                 </p>
                 <p class="input-one">
                     <label for="phone">Telephone</label>
-                    <input type="tel" id="phone" class="input-onei" autocomplete="on" placeholder="1-234-567-8910" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" name="Surname" required>
+                    <input type="tel" id="phone" class="input-onei" autocomplete="on" placeholder="1-234-567-8910" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" name="Telephone" required>
                 </p>
                 <p class="input-one">
                     <label for="email">Email address</label>
