--- a/homework/task_4/index.html
+++ b/homework/task_4/index.html
@@ -33,7 +33,7 @@
                 <legend>Books</legend>
                 <p class="input-two">
                     <input list="books">
-                        <datalist id="browsers" name="Books">
+                        <datalist id="books" name="Books">
                           <option value="Part One">
                           <option value="Part Two">
                           <option value="Part Three">
