--- a/homework/task_4/index.html
+++ b/homework/task_4/index.html
@@ -32,8 +32,8 @@
             <fieldset>
                 <legend>Books</legend>
                 <p class="input-two">
-                    <input list="books">
-                        <datalist id="books" name="Books">
+                    <input list="books" name="Books">
+                        <datalist id="books" >
                           <option value="Part One">
                           <option value="Part Two">
                           <option value="Part Three">
