--- a/homework/task_4/css-advanced/index.html
+++ b/homework/task_4/css-advanced/index.html
@@ -19,8 +19,8 @@
         <div class="client">Klient 11</div>
         <div class="client" detaliczny="mozetak">Klient 9</div>
     </div>
-    
-    <input type="password" name="tajne" class="pass">
-    <input type="password" class="pass">
+    <br />
+    <input type="password" typ="tajne" class="pass">
+    <input type="password" class="pass"> 
 </body>
 </html>
