--- a/warsztaty/sample/index.html
+++ b/warsztaty/sample/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="elementy-inline-block">
     <ul>
-        <li>1</li>
+        <li><span class="sp1">1</span><span class="sp2">!</span></li>
         <li>2</li>
         <li>3</li>
         <li>4</li>
