--- a/homework/task_5/index.html
+++ b/homework/task_5/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>RWD</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    
+   <div>
+    <img src="../task_5/img/man-1.jpg" alt="man-1">
+    <p class="p1">I am the best</p>
+    <p class="p2">Front End Developer</p>
+   </div>
 </body>
 </html>
