--- a/homework/task_4/index.html
+++ b/homework/task_4/index.html
@@ -41,7 +41,7 @@
                           <option value="Part Five">
                         </datalist>
                     <label for="quantity">Quantity (Maximum 5)</label>
-                    <input type="number" id="quantity" max="5" name="Quantity">
+                    <input type="number" id="quantity" max="5" min="0" name="Quantity">
                 </p>
             </fieldset>
             <br />
